# OpenShield

./: .gitignore  Dockerfile  README.md  docker-compose.yml  openshield  openshield.bat  openshield.yaml  pyproject.toml  requirements.txt  test_advanced_features.py  test_research.py
ai/: __init__.py  factory.py  gemini_client.py  openai_client.py
ai/prompt_templates/: __init__.py  analyst.py  planner.py  reporter.py  tool_selector.py
cli/: __init__.py  main.py  tui.py
cli/commands/: __init__.py  ai_explain.py  analyze.py  chat.py  exploit.py  init.py  recon.py  registry.py  report.py  scan.py  workflow.py
config/: openshield.yaml
core/: __init__.py  agent.py  analyst_agent.py  browser_agent.py  chat_agent.py  exploit_generator_agent.py  exploitation_workflow.py  memory.py  planner.py  remediation_agent.py  reporter_agent.py  research_agent.py  smart_shield.py  tool_agent.py  workflow.py
core/mcp/: exa_client.py
docs/: DOCKER.md  README.md  TOOLS_DEVELOPMENT_GUIDE.md  WORKFLOW_GUIDE.md
tools/: __init__.py  amass.py  arjun.py  base_tool.py  cmseek.py  dnsrecon.py  dorking.py  ffuf.py  gitleaks.py  gobuster.py  httpx.py  masscan.py  nikto.py  nmap.py  nuclei.py  sqlmap.py  sslyze.py  subfinder.py  testssl.py  wafw00f.py  whatweb.py  wpscan.py  xsstrike.py
utils/: __init__.py  helpers.py  logger.py  scope_validator.py
workflows/: __init__.py  advanced_recon.yaml  autonomous.yaml  full_vuln_scan.yaml  network_pentest.yaml  recon.yaml  web_pentest.yaml  wordpress_audit.yaml
